# graphics-labs

./: README.md
lab1/: CMakeLists.txt  main.cpp
lab1/assets/shaders/: simple.frag  simple.vert
lab2/: .gitignore  main.cpp
lab2/assets/shaders/: simple.frag  simple.vert
